# cmake_practice

./: .gitignore  CMakeLists.txt  assimpexample.cc  hello.cc  redtriangle.cc
resources/meshes/: sphere.fbx
resources/shaders/: basic.vert
shaders/: basic.vert
src/: CMakeLists.txt  assimpexample.cc
